# ml-isect-segments-bentley-ottmann

./: README.md  pyproject.toml  readme.rst
tests/: tests.py
