[tool.poetry]
name = "ml-isect-segments-bentley-ottmann"
version = "0.1.0"
description = "BentleyOttmann sweep-line implementation"
authors = ["Campbell Barton"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
